[tool.poetry]
name = "solarblinds2"
version = "0.1.0"
description = ""
authors = ["Laurenz <git@laure.nz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
astral = "^2.2"
click = "^7.1"
pause = "^0.3"
PyYAML = "^5.4"
requests = "^2.25"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']

